[gd_scene load_steps=11 format=3 uid="uid://bh5vabhl4s6t"]

[ext_resource type="Script" path="res://scenes/whale/attacks/Projectile.gd" id="1_a2jkq"]
[ext_resource type="Texture2D" uid="uid://d4ip31f7km876" path="res://scenes/whale/fireball.png" id="2_w4vlq"]
[ext_resource type="AudioStream" uid="uid://bhfendmu046sa" path="res://asset/sfx/fireballhit.ogg" id="3_3vttj"]
[ext_resource type="FontFile" uid="uid://traj52d5abna" path="res://asset/font/joystix monospace.otf" id="4_865vf"]

[sub_resource type="AtlasTexture" id="AtlasTexture_5icsh"]
atlas = ExtResource("2_w4vlq")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_k3ts3"]
atlas = ExtResource("2_w4vlq")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_eg0uh"]
atlas = ExtResource("2_w4vlq")
region = Rect2(0, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_uybug"]
atlas = ExtResource("2_w4vlq")
region = Rect2(16, 16, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_dhvne"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5icsh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k3ts3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eg0uh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uybug")
}],
"loop": true,
"name": &"default",
"speed": 15.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_8xomy"]
radius = 31.0

[node name="Projectile" type="Area2D"]
script = ExtResource("1_a2jkq")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
scale = Vector2(5, 5)
sprite_frames = SubResource("SpriteFrames_dhvne")
frame_progress = 0.951004
metadata/_aseprite_wizard_config_ = {
"layer": "",
"o_ex_p": "",
"o_folder": "",
"o_name": "",
"only_visible": false,
"op_exp": false,
"source": "C:/Users/Alp/Desktop/ase/Enemies/Aseprite/fireball.ase"
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_8xomy")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_3vttj")
autoplay = true

[node name="TrailLabel" type="Label" parent="."]
offset_right = 134.0
offset_bottom = 30.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 3
theme_override_constants/shadow_offset_y = 3
theme_override_constants/outline_size = 1
theme_override_fonts/font = ExtResource("4_865vf")
theme_override_font_sizes/font_size = 31
text = "BasitGaming"

[node name="destroyTimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[connection signal="body_entered" from="." to="." method="_on_Area2D_body_entered"]
[connection signal="timeout" from="destroyTimer" to="." method="_on_destroy_timer_timeout"]
